--- a/Styles/portfolio-style.css
+++ b/Styles/portfolio-style.css
@@ -4,6 +4,7 @@
     font-style: normal;
     font-variation-settings: "width" 100;
 }
+
 /* header-image */
 .header {
     background-image: url("../images/developer.png"), url(../images/header_bg.png);
@@ -11,6 +12,7 @@
     background-position: top left, bottom right;
     align-items: center;
 }
+
 /* nav styles */
 nav {
     display: flex;
@@ -18,29 +20,40 @@ nav {
     justify-content: space-between;
     margin: 0px 50px;
 }
+
 .nav-tittle {
     font-weight: 800;
     font-size: 45px;
     margin-left: 105px;
 }
+
 .kam {
     color: tomato;
 }
+
 li {
     list-style: none;
     margin-right: 50px;
 }
+
 li a {
     text-decoration: none;
     font-size: 20px;
 }
+
 .dark-2 {
     color: #474747;
 }
+
 ul {
     display: flex;
     align-items: center;
 }
+
+.secondary-bg {
+    background-color: #fff8f3;
+}
+
 .btn-primary {
     background-color: tomato;
     font-weight: 700;
@@ -49,14 +62,21 @@ ul {
     padding: 18px 35px;
     border-radius: 5px;
 }
+
+.text-center {
+    text-align: center;
+}
+
 .banner-greetings {
     font-size: 45px;
     font-weight: 600px;
 }
+
 .banner-tittle {
     font-weight: bold;
     font-size: 85px 200px;
 }
+
 .banner-content {
     max-width: 580px;
 }
@@ -68,5 +88,84 @@ ul {
 }
 
 .dp {
-    width 580px;
+    width: 280px;
+}
+
+/* About section */
+.section-tittle {
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+   
+}
+
+.about {
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: justify;
+    margin-top: 110px;
+
+}
+
+.about-items {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.item-description {
+    font-weight: 600;
+}
+
+.section.description {
+    font-size: 18px;
+    color: #757575;
+    text-align: justify;
+}
+
+/* main styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+    background-color: #e7dbd3;
+    margin: 20px;
+    padding: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;;
+}
+
+.skills {
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgb(0, 0, 0);
+
+}
+.skills-description{
+    text-align: justify;
+    padding: 10px;
+} 
+/* footer style */
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+.footer-column{
+    width: 50%
+}
+footer input[type="text"], footer input[type="email"], footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding:10px 20px;
+    margin-bottom: 24px;
+    border: none;
 }
